--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,4 @@ serde = { version = "1.0.114", features = ["derive"] }
 roxmltree = "0.13.0"
 rayon = "1.3.1"
 iter-read = "0.3.0"
-
-[dependencies.reqwest]
-version = "0.10.6"
-features = ["blocking"]
-
-[features]
-rustls-tls = ["reqwest/rustls-tls"]
+reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
